feat: expose Prometheus metrics (#32)
